# rs-mdbook-callouts

./: Cargo.toml  LICENSE  README.md  book.toml
assets/: alerts.tmpl  style.css
example/src/: chapter_1.md
src/: lib.rs  main.rs
