[package]
name = "mdbook-callouts"
version = "0.2.1"
authors = ["Alisue <lambdalisue@gmail.com>", "GrayJack <gr41.j4ck@gmail.com>"]
edition = "2021"

description = "mdBook preprocessor to add Obsidian Flavored Markdown's Callouts to your book"
repository = "https://github.com/GrayJack/rs-mdbook-callouts"
license = "MIT"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown", "obsidian", "callouts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
mdbook = "0.4.36"
once_cell = "1.19.0"
regex = "1.10.2"
rust-embed = "8.2.0"
semver = "1.0.21"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
